fixed spinner showing on firefox, added onSubmite handler for bpm input

--- a/src/index.css
+++ b/src/index.css
@@ -22,4 +22,7 @@
 		-webkit-appearance: none;
 		margin: 0;
 	}
+	input[type='number'] {
+		-moz-appearance: textfield;
+	}
 }
